remove unused jquery, add axios and lodash, add classes to movie table rows, add javascript classes: Movies and Movie for easier DOM accessability, add logic for pulling and populating movies table

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,8 @@
     %title= content_for?(:title) ? yield(:title) : 'Pairguru'
     %meta{ name: "description", content: "#{content_for?(:description) ? yield(:description) : 'Props'}" }
     = stylesheet_link_tag 'application', media: 'all'
+    %script{ src: 'https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js' }
+    %script{ src: 'https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js' }
     = javascript_include_tag 'application'
     = csrf_meta_tags
   %body
