--- a/app/views/movies/_movies_table.html.haml
+++ b/app/views/movies/_movies_table.html.haml
@@ -1,15 +1,16 @@
-%table.table.table-striped
+%table#movies.table.table-striped
   %tbody
     - movies.each_with_index do |movie, i|
-      %tr
+      %tr.movie
         %td= i + 1
         %td
-          %img.img-rounded{ src: movie.cover }
+          %img.img-rounded.img-thumbnail.movie-cover
         %td
           %h4
-            = link_to movie.title, movie_path(movie)
+            = link_to movie.title, movie_path(movie), class: 'movie-title'
           %p
             %strong
               = link_to movie.genre.name, movies_genre_path(movie.genre)
             = ' (' + movie.released_at.to_s + ')'
-          %p= movie.description
+          %p.movie-description
+= paginate movies
