--- a/app/views/movies/_movies_table.html.haml
+++ b/app/views/movies/_movies_table.html.haml
@@ -13,3 +13,4 @@
               = link_to movie.genre.name, movies_genre_path(movie.genre)
             = ' (' + movie.released_at.to_s + ')'
           %p.movie-description
+= paginate movies
