add missing rating to movies#index

--- a/app/views/movies/_movies_table.html.haml
+++ b/app/views/movies/_movies_table.html.haml
@@ -10,6 +10,11 @@
             = link_to movie.title, movie_path(movie), class: 'movie-title'
           %p
             %strong
+              Rating: 
+              %span.movie-rating -
+              \/ 10
+          %p
+            %strong
               = link_to movie.genre.name, movies_genre_path(movie.genre)
             = ' (' + movie.released_at.to_s + ')'
           %p.movie-description
